--- a/temalar/sosero2/html/tarifler.html
+++ b/temalar/sosero2/html/tarifler.html
@@ -1,6 +1,6 @@
 
 <div data-byk="sığ">
-  <div data-byk="1 2p lt sütun kaymadan" style="min-height: 200px; background: url('/temalar/sosero2/assets/img/domates_corbasi.jpg') no-repeat center center;background-size:cover;">
+  <div data-byk="1 2p lt sığ sütun kaymadan" style="min-height: 200px; background: url('/temalar/sosero2/assets/img/domates_corbasi.jpg') no-repeat center center;background-size:cover;">
 
     <header data-gnl="23 24p" data-byk="0" style="position:absolute; z-index:999;">
       <a class="logo" href="#"><img src="/temalar/sosero2/assets/img/sosero.png" alt="SOSERO"></a>
