--- a/temalar/sosero2/html/site.html
+++ b/temalar/sosero2/html/site.html
@@ -20,6 +20,7 @@
   display: none;
 }
 .animate_content {
+
   animation: animate 3s ease;
 }
 .fadeIn {
@@ -31,6 +32,7 @@
     transform: scale(1, 0.002);
   }
   35% {
+    background-color:red;
     transform: scale(0.2, 0.002);
     opacity: 1;
   }
@@ -39,6 +41,7 @@
     opacity: 0;
   }
   85% {
+    background: transparent;
     transform: scale(1, 0.002);
     opacity: 1;
   }
@@ -51,6 +54,7 @@
     transform: scale(1, 0.002);
   }
   35% {
+    background-color:red;
     transform: scale(0.2, 0.002);
     opacity: 1;
   }
@@ -59,6 +63,7 @@
     opacity: 0;
   }
   85% {
+    background: transparent;
     transform: scale(1, 0.002);
     opacity: 1;
   }
@@ -91,6 +96,7 @@
     transform: scale(1, 0.002);
   }
   35% {
+    background-color:red;
     transform: scale(0.2, 0.002);
     opacity: 1;
   }
@@ -99,6 +105,7 @@
     opacity: 0;
   }
   85% {
+    background: transparent;
     transform: scale(1, 0.002);
     opacity: 1;
   }
