--- a/temalar/sosero2/html/hakkimizda.html
+++ b/temalar/sosero2/html/hakkimizda.html
@@ -45,3 +45,12 @@
   </div>
 </div>
 </div>
+<script>
+
+window.benimFonk = function() {
+
+alert('Ben hakkimzda sayfasindan calisan bir JS  yim');
+
+}
+
+</script>
