--- a/temalar/sosero2/html/site.html
+++ b/temalar/sosero2/html/site.html
@@ -194,7 +194,7 @@
       <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
           
           <script src="/temalar/sosero2/assets/js/slick.min.js" type="text/javascript" charset="utf-8"></script>
-          <script src="/temalar/sosero2/assets/js/slick.set.js" type="text/javascript" charset="utf-8"></script>
+          <script src="/temalar/sosero2/assets/js/genel.js" type="text/javascript" charset="utf-8"></script>
             <script type="text/javascript">
 
             </script>
