--- a/temalar/sosero2/html/tarifler.html
+++ b/temalar/sosero2/html/tarifler.html
@@ -126,3 +126,15 @@
     </div>
   </div>
 </div>
+<script type="text/javascript">
+    window.sosero = function () {
+      $('.regular2').slick({
+        dots: true,
+        infinite: false,
+        speed: 300,
+        slidesToShow: 1,
+        slidesToScroll: 1
+      });     
+    }
+  </script>
+</section>
