--- a/temalar/sosero2/html/site.html
+++ b/temalar/sosero2/html/site.html
@@ -163,27 +163,27 @@
             </label>
           </li>
           <li>
-            <a href="urunler.html"><i class="simge-urunler"></i><span>Ürünler</span></a>
+            <a href="urunler.html" data-ajax-getir="1"><i class="simge-urunler"></i><span>Ürünler</span></a>
           </li>
           <li>
-            <a href="tarifler.html"><i class="simge-yemek-tarifleri"></i><span>Yemek Tarifleri</span></a>
+            <a href="tarifler.html" data-ajax-getir="1"><i class="simge-yemek-tarifleri"></i><span>Yemek Tarifleri</span></a>
           </li>
           <li>
-            <a href="tesisler.html"><i class="simge-uretim-tesisleri"></i><span>Üretim Tesisleri</span></a>
+            <a href="tesisler.html" data-ajax-getir="1"><i class="simge-uretim-tesisleri"></i><span>Üretim Tesisleri</span></a>
           </li>
           <li>
-            <a href="katalog.html"><i class="simge-katalog"></i><span>Katalog</span></a>
+            <a href="katalog.html" data-ajax-getir="1"><i class="simge-katalog"></i><span>Katalog</span></a>
           </li>
           <li>
-            <a href="satisnoktalari.html"><i class="simge-satis-noktalari"></i><span>Satış Noktaları</span></a></li>
+            <a href="satisnoktalari.html" data-ajax-getir="1"><i class="simge-satis-noktalari"></i><span>Satış Noktaları</span></a></li>
           <li>
-            <a href="haberler.html"><i class="simge-haberler"></i><span>Haberler</span></a>
+            <a href="haberler.html" data-ajax-getir="1"><i class="simge-haberler"></i><span>Haberler</span></a>
           </li>
           <li>
-            <a href="hakkimizda.html"><i class="simge-hakkimizda"></i><span>Hakkımızda</span></a>
+            <a href="hakkimizda.html" data-ajax-getir="1"><i class="simge-hakkimizda"></i><span>Hakkımızda</span></a>
           </li>
           <li>
-            <a href="iletisim.html"><i class="simge-iletisim"></i><span>İletişim</span></a>
+            <a href="iletisim.html" data-ajax-getir="1"><i class="simge-iletisim"></i><span>İletişim</span></a>
           </li>
         </ul>
       </nav>
