--- a/1.0/en/kap-orgusu.html
+++ b/1.0/en/kap-orgusu.html
@@ -2,82 +2,66 @@
 layout: s1n0/default
 title: Kap Örgüsü 1.0
 ---
-    <p class="girlik">
-      İşte bu! İstediğiniz yerde, istediğiniz anda, istediğiniz ölçekte
-      çalışın. Ağ sitesi tasarımlarını yaparken güçlendirilmiş ve uyarlamalı çoklu-kap örgüsünü kullanın.
-      Artık tek düzene bağlı kalmak yok. Her şey elinizin altında hazır.
-    </p>
+  <p class="girlik">
+    That's it! Work where you want, on the scale you want. Use reinforced and adaptive multi-container mesh when designing network sites. There is no longer a single plan. Everything is ready under your hands.
+  </p>
 
-    <h1>Nasıl İşler?</h1>
-    <p>
-      <span class="simget">deveb</span> kap örgüsü 12'li, 16'lı, 24'lü gibi
-      1'li düzenden 24'lü düzene kadar olan tüm düzenleri aynı anda, aynı çalışma
-      sayfasında kullanabilmeyi sağlar. Diğer önyüz çatılarındaki kap örgüleri (grid system)
-      gibi tek düzende değildir. Ellerinizi bağlı tutmaz, özgürleştirir.
-    </p>
-    <p>
-      Satır ve sütun düzeninde kapsayıcı serileri ve diziliş özelliklerine sahiptir.
-      Esnekkutu örgüsüyle uyarlamalı olarak yapılandırılmıştır. Belleti sayfasının aşağısında örnekleri
-      ve ayrıntıları inceleyebilirsiniz. Esnekkutu ingilizcedeki karşılığı ile flexbox örgüsüne
-      yabancı olanlara gelince, <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Flexible_Box_Layout/Basic_Concepts_of_Flexbox">Mozilla'nın esnekkutu belletileri</a>nden faydalanabilirler.
-    </p>
+  <h1>How does it work?</h1>
+  <p>
+    <span class="simget">deveb</span> grid system like 12, 16, 24. All of the layouts from 1 to 24 are the same,
+    page. The other css framework is not the only one like the grid system. It will free your hands, free you.
+  </p>
+  <p>
+    It has row and column layout, container sequences and layouts. It is customized with a flexible box braid. Examples of articles page and present it to you. Flexbox braid when it comes to strangers, they can take advantage of  <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Flexible_Box_Layout/Basic_Concepts_of_Flexbox">Mozilla's flexible</a> billboards.
+  </p>
 
-    <h2>Nedir, Nasıl Kullanılır?</h2>
-    <p>
-      Kap örgüsü, kullanıldığı sayfanın içinde çeşitli yöntemlerle genişlikler
-      tanımlamaya yarayan, konumlama ve sıralama gibi işleri yapabilen örgüdür.
-      "Kap" sözcüğünden anlaşılacağı üzere belirtilen alanın kapsayıcısıdır.
-      <span class="simget">deveb</span> kap örgüsü, kendisine özgü kullanımıyla
-      ilk başta zorlasa bile oldukça kolay yapılandırılmıştır.
-    </p>
-    <p>
-      Parça düzeni, genleşme düzeni ve sıklaşma düzeni olmak üzere üç ana kap
-      düzeninden oluşan bir kap örgüsüdür. Tasarımcı istediği düzeni anında seçip
-      kullanmaya başlayabilir. Bunların yanında sıralama özelliği, konumlama
-      özelliği, gizleme özelliği gibi özellikler de kap örgüsüne dahildir. Daha çok
-      ayrıntılı bilgi için aşağıdaki başlıkları inceleyin.
-    </p>
-    <h3>Parça Düzeni</h3>
-    <p>
-      Yüzdesel değerlerde ve kararlı genişliklerde ölçüler tanımlamak için yapılmıştır.
-      Kap kavramını oturttukça dilediğiniz yönde kurgularınızı çeşitlendirebilirsiniz.
-      1'den 24'e kadar parça düzenleri kullanıma hazır olarak gelir.
-      <a href="/1.0/tr/kap-orgusu/parca-duzeni.html">Parça düzeni</a> ile ilgili belleti sayfalarını
-      okuyarak ayrıntılı bilgiler edinin.
-    </p>
+  <h2>How is it used?</h2>
+  <p>
+    In the Grid System, the widths which is able to do tasks such as positioning and sorting. It is the container for the specified field to be understood from the word "Grid". The <span class = "simget"> deveb </ span> cap braid has its own unique use even if it is difficult at first.
+  </p>
+  <p>
+    There are three main vessels, one for parting, one for expansion and one for tightening. is a container mesh composed of an array of. The designer can instantly select the desired scheme. Besides these, sort feature, positioning features, such as the ability to hide the cap is also included in the texture. More review the following topics for more information.
+  </p>
+  <h3>Piece Layout</h3>
+  <p>
+  It was made to define the measures in percentages and stable widths.
+     You can vary your preferences in the direction you want the concept of the container to sit.
+     Part layouts from 1 to 24 come ready to use.
+     <a href="/1.0/en/kap-orgusu/parca-duzeni.html"> Piece Layout </a> related article pages
+     read more information.
+  </p>
 
-    <h3>Genleşme Düzeni</h3>
-    <p>
-      Ögeleri bulunduğu satırda genleşme etkisiyle birlikte birbirleriyle oranlayarak
-      genişlik ölçüleri tanımlamak için yapılmıştır. Satır boyu işlevselliği olduğu için
-      alt satırdan devam edilmesi istenildiğinde özel yöntemlere başvurulur.
-      Daha iyi bellemek için <a href="/1.0/tr/kap-orgusu/genlesme-duzeni.html">genleşme düzeni
-      belleti sayfalarını</a> inceleyin.
-    </p>
-    <h3>Sıklaşma Düzeni</h3>
-    <p>
-      Daha iyi bellemek için <a href="/1.0/tr/kap-orgusu/siklasma-duzeni.html">sıklaşma düzeni
-      belleti sayfaları</a> hazırlık aşamasındadır.
-    </p>
+  <h3>Rhythm Layout</h3>
+  <p>
+   On the line where the objects are located,
+     width measurements. For line-of-business functionality
+     special methods are used when it is desired to continue from the bottom line.
+     For better reporting, please review the <a href="/1.0/en/kap-orgusu/genlesme-duzeni.html"> Rhythm Layout article pages </a>.
+  </p>
+  <h3>Grow Layout</h3>
+  <p>
+    To better understand, <a href="/1.0/en/kap-orgusu/siklasma-duzeni.html"> Grow Layout
+     article pages </a> are in the preparation phase.
+  </p>
 
-    <h3>Konumlama</h3>
-    <p>
-      Konumlama özelliği kap örgüsünün en çok kullanılan özelliğinden bir tanesidir. Konumlama
-      yaparken sunduğu olanaklar işlerinizi çok kolaylaştıracaktır. Sağda, ortada,
-      üstte gibi konumlamaları çok rahat yapabileceksiniz. Ayrıntıları incelerken
-      her şeyi ilk bakışta fark edeceğinizden dolayı konuyu fazla uzatmıyor ve
-      <a href="/1.0/tr/kap-orgusu/konumlama.html">konumlama belleti sayfasına</a>
-      yönlendiriyoruz.
-    </p>
+  <h3>Space Layout</h3>
+  <p>
+    The positioning feature is one of the most used features of the container framework. Positioning
+     the opportunities that you offer while doing so will make your work very easy. On the right, in the middle,
+     you'll be able to make very comfortable positioning like above. While examining the details
+     because you will notice everything at first glance,
+     <a href="/1.0/en/kap-orgusu/hotel.html"> Space Layout page </a>
+     We direct.
+  </p>
 
-    <h3>Sıralama</h3>
-    <p>
-      Sıralama özelliği kap örgüsünün ilginç bir özelliğidir. Günümüzde display:flex
-      ile gelen özelliklerden biridir. Bu özelliğin ortaya çıkışı çok daha öncelere
-      dayanır. Yaygın kullanımı son yıllarda olması sebebiyle birçok kişi için yeni
-      bir özellik olarak anlaşılır. Örneğin geniş ekranlarda yan yana duran iki
-      ögenin dar ekranlarda alt alta durmasını sağladınız ama altta görünen öge aslında üstte
-      durmalı diye karar verdiniz. Nasıl yapacaksınız? İşte sıralama özelliği burada
-      yardımınıza koşuyor. Ayrıntılar için <a href="/1.0/tr/kap-orgusu/siralama.html">sıralama sayfasını</a>
-      inceleyebilirsiniz.
-    </p>
+  <h3>Type Layout</h3>
+  <p>
+  The sorting feature is an interesting feature of the container mesh. Today, display: flex
+     is one of the features that come with. The emergence of this feature is far ahead
+     It is based. Due to the widespread use in recent years, many
+     it is understood as a property. For example, on two large screens, two
+     you have enabled the lower edge to stay on the narrow screens, but the element that appears at the bottom is actually the top
+     you decided to stop. How will you do it? Here is the sorting feature here
+     your help is running. <a href="/1.0/en/kap-orgusu/siralama.html"> Type Layout </a> for details
+     You can review.
+  </p>
