--- a/1.0/en/kap-orgusu.html
+++ b/1.0/en/kap-orgusu.html
@@ -24,37 +24,28 @@ title: Grid System 1.0
   </p>
   <h3>Piece Layout</h3>
   <p>
-  It was made to define the measures in percentages and stable widths.
-     You can vary your preferences in the direction you want the concept of the container to sit.
-     Part layouts from 1 to 24 come ready to use.
-     <a href="/1.0/en/kap-orgusu/parca-duzeni.html"> Piece Layout </a> related article pages
-     read more information.
+    It was made to define the measures in percentages and stable widths. You can vary your preferences in the direction you want the concept of the container to sit. Part layouts from 1 to 24 come ready to use. <a href="/1.0/en/kap-orgusu/parca-duzeni.html"> Piece Layout </a> related article pages read more information.
   </p>
 
-  <h3>Rhythm Layout</h3>
-  <p>
-   On the line where the objects are located,
-     width measurements. For line-of-business functionality
-     special methods are used when it is desired to continue from the bottom line.
-     For better reporting, please review the <a href="/1.0/en/kap-orgusu/genlesme-duzeni.html"> Rhythm Layout article pages </a>.
-  </p>
   <h3>Grow Layout</h3>
   <p>
-    To better understand, <a href="/1.0/en/kap-orgusu/siklasma-duzeni.html"> Grow Layout
-     article pages </a> are in the preparation phase.
+    On the line where the objects are located, width measurements. For line-of-business functionality special methods are used when it is desired to continue from the bottom line. For better reporting, please review the <a href="/1.0/en/kap-orgusu/genlesme-duzeni.html"> Grow Layout article pages </a>.
+  </p>
+  <h3>Shrink Layout</h3>
+  <p>
+    To better understand, <a href="/1.0/en/kap-orgusu/siklasma-duzeni.html"> Shrink Layout article pages </a> are in the preparation phase.
   </p>
 
-  <h3>Space Layout</h3>
+  <h3>Positioning</h3>
   <p>
     The positioning feature is one of the most used features of the container framework. Positioning
      the opportunities that you offer while doing so will make your work very easy. On the right, in the middle,
      you'll be able to make very comfortable positioning like above. While examining the details
-     because you will notice everything at first glance,
-     <a href="/1.0/en/kap-orgusu/hotel.html"> Space Layout page </a>
+     because you will notice everything at first glance, <a href="/1.0/en/kap-orgusu/konumlama.html"> Space Layout page </a>
      We direct.
   </p>
 
-  <h3>Type Layout</h3>
+  <h3>Order</h3>
   <p>
   The sorting feature is an interesting feature of the container mesh. Today, display: flex
      is one of the features that come with. The emergence of this feature is far ahead
