--- a/1.0/en/kap-orgusu.html
+++ b/1.0/en/kap-orgusu.html
@@ -3,56 +3,44 @@ layout: s1n0/default
 title: Grid System 1.0
 ---
   <p class="girlik">
-    That's it! Work where you want, on the scale you want. Use reinforced and adaptive multi-container mesh when designing network sites. There is no longer a single plan. Everything is ready under your hands.
+    That's it! Work where you want, when you want, on the scale you want. Use a powered and responsive multi-grid system when designing web sites. There is no longer a single plan. Everything is ready under your hands.
   </p>
 
   <h1>How does it work?</h1>
   <p>
-    <span class="simget">deveb</span> grid system like 12, 16, 24. All of the layouts from 1 to 24 are the same,
-    page. The other css framework is not the only one like the grid system. It will free your hands, free you.
+    <span class="simget">deveb</span> grid system supports 12, 16, 24 and other piece layouts at the same time. It allows you to use all the layouts from 1 to 24 straight piece layouts on the same working page at the same time. The other frontend does not provide single layout support like grid systems on the roof. It will free your hands, free you.
   </p>
   <p>
-    It has row and column layout, container sequences and layouts. It is customized with a flexible box braid. Examples of articles page and present it to you. Flexbox braid when it comes to strangers, they can take advantage of  <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Flexible_Box_Layout/Basic_Concepts_of_Flexbox">Mozilla's flexible</a> billboards.
+    Rows and columns have regular container sequences and sorting properties. Flexible box system is configured responsive. You can examine the examples and details below the page. Those who want to learn more about the flexible box can benefit from <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Flexible_Box_Layout/Basic_Concepts_of_Flexbox">Mozilla's flexible</a> documentation.
   </p>
 
   <h2>How is it used?</h2>
   <p>
-    In the Grid System, the widths which is able to do tasks such as positioning and sorting. It is the container for the specified field to be understood from the word "Grid". The <span class = "simget"> deveb </ span> cap braid has its own unique use even if it is difficult at first.
+    The grid system is a system that can perform positioning and sorting tasks to define widths in various ways within the page being used. The grid system is very easy to use in its own way.
   </p>
   <p>
-    There are three main vessels, one for parting, one for expansion and one for tightening. is a container mesh composed of an array of. The designer can instantly select the desired scheme. Besides these, sort feature, positioning features, such as the ability to hide the cap is also included in the texture. More review the following topics for more information.
+    It is a grid system consisting of three main layouts: Piece layout, grow layout and shrink layout.The designer can instantly select and use the desired layout. In addition to these features such as sorting feature, positioning feature, hiding feature is also included in the grid system. For more detailed information, review the topics below.
   </p>
   <h3>Piece Layout</h3>
   <p>
-    It was made to define the measures in percentages and stable widths. You can vary your preferences in the direction you want the concept of the container to sit. Part layouts from 1 to 24 come ready to use. <a href="/1.0/en/kap-orgusu/parca-duzeni.html"> Piece Layout </a> related article pages read more information.
+    It was made to define the measures in percentages and stable widths. From 1 to 24 piece layouts are ready to use under your hand. Get detailed information by reading the document pages about <a href="/1.0/en/kap-orgusu/parca-duzeni.html"> Piece Layout </a>.
   </p>
 
   <h3>Grow Layout</h3>
   <p>
-    On the line where the objects are located, width measurements. For line-of-business functionality special methods are used when it is desired to continue from the bottom line. For better reporting, please review the <a href="/1.0/en/kap-orgusu/genlesme-duzeni.html"> Grow Layout article pages </a>.
+    They will have the width of grow effect. Because it is row functionality, it is referenced by special methods if it is requested to continue from the bottom line. Check <a href="/1.0/en/kap-orgusu/genlesme-duzeni.html"> Grow Layout document pages </a> for better reporting.
   </p>
   <h3>Shrink Layout</h3>
   <p>
-    To better understand, <a href="/1.0/en/kap-orgusu/siklasma-duzeni.html"> Shrink Layout article pages </a> are in the preparation phase.
+    <a href="/1.0/en/kap-orgusu/siklasma-duzeni.html"> Shrink layout document pages</a> are in the preparation phase.
   </p>
 
   <h3>Positioning</h3>
   <p>
-    The positioning feature is one of the most used features of the container framework. Positioning
-     the opportunities that you offer while doing so will make your work very easy. On the right, in the middle,
-     you'll be able to make very comfortable positioning like above. While examining the details
-     because you will notice everything at first glance, <a href="/1.0/en/kap-orgusu/konumlama.html"> Space Layout page </a>
-     We direct.
+    The positioning feature is one of the most used features of the grid system. The opportunities offered when positioning will make your work easier.On the right, middle, top, you can make positioning very comfortable. Review the details on the <a href="/1.0/en/kap-orgusu/konumlama.html">document page</a>.
   </p>
 
   <h3>Order</h3>
   <p>
-  The sorting feature is an interesting feature of the container mesh. Today, display: flex
-     is one of the features that come with. The emergence of this feature is far ahead
-     It is based. Due to the widespread use in recent years, many
-     it is understood as a property. For example, on two large screens, two
-     you have enabled the lower edge to stay on the narrow screens, but the element that appears at the bottom is actually the top
-     you decided to stop. How will you do it? Here is the sorting feature here
-     your help is running. <a href="/1.0/en/kap-orgusu/siralama.html"> Type Layout </a> for details
-     You can review.
+    The Order feature is an interesting feature of the grid system. Today, it is one of the features that comes with display: flex. The emergence of this feature is based on much earlier. It is understood as a new feature for many people because of its widespread use in recent years. For example, in wide screens you have two items standing side by side in a narrow screen, but you have decided that the bottom item should actually stay on top. How will you do it? Here is the order feature here comes your help. You can review <a href="/1.0/en/kap-orgusu/siralama.html">the order page</a> for details.
   </p>
