--- a/1.0/en/kap-orgusu/olcekler.html
+++ b/1.0/en/kap-orgusu/olcekler.html
@@ -2,17 +2,16 @@
 layout: s1n0/default
 title: Scales - Grid System
 ---
-<div>
-  <p>Aşağıdaki tabloda 24 parçalı gruba kadar belirlenmiş parça gruplarını görmektesiniz. Bir genişlikte tablodaki değerlere göre düzen kurmak istiyorsanız tip="değer" kuralı üzerinden sınıf yazarsınız. Örnek: data-gnl="4 8p" yani tüm ekranlarda içinde bulunduğu genişliğin 8'e bölünmüş eşit parçasından 4 tanesinin toplamı kadar genişlik kullanılacağını belirtir. </p>
-</div>
+
+  <p>
+    In the table below you will see groups set up as 24-piece group. According to the values in the table attribute = "value" is used. Example: data-gnl = "4 8p". Meaning: your width is 4 out of 8 equal parts.
+  </p>
+
 <div class="beri-üst-1">
   <div class="beri-alt-1">
     <div class="kutu kutu-genel">
       <ul class="liste-temiz">
-        <li><span class="metin-tehlike"><i class="fa fa-info"></i> Bilgi:</span> Tabloda görülen değerler html etiketlerinde tip="değer" şeklinde yazılarak data-gnl=" ", data-ufk=" ", data-ort=" ", data-byk=" "  ekran tipleriyle kullanılır.</li>
-        <li><span class="metin-tehlike"><i class="fa fa-info"></i> Bilgi:</span> En dış etikette belirlediğiniz parça grubunu sürekli kullanacaksanız iç tiplerde tekrar belirtmenize gerek yoktur. Örnek "24p" > "8 24p" "8 24p" "8 24p" yerine "24p" > "8" "8" "8" yazabilirsiniz.</li>
-        <li><span class="metin-tehlike"><i class="fa fa-info"></i> Bilgi:</span> En dış etikette belirlediğiniz parça grubundan farklı bir parça grubunu iç tiplerde kullanabilirsiniz. Örnek "24p" > "8" "8" "8" yerine "24p" > "8" "4 12p" "8" yazabilirsiniz.</li>
-        <li><span class="metin-tehlike"><i class="fa fa-info"></i> Bilgi:</span> En dış etikette belirlediğiniz parça grubunu iç tiplerde 1 değerini yazarak genişliği eşit olarak bölebilirsiniz. Örnek "6p" > "1 24p" "1 24p" "1 24p" "1 24p" "1 24p" "1 24p" - Eğer "6p" yerine "3p" yazarsanız 6şarlı alan 3erli olacaktır.</li>
+        <li><span class="metin-tehlike"><i class="fa fa-info"></i> INFO:</span> The values in the table are used in html tags by writing attribute = "value" (data-gnl = "", data-xs = "", data-md = "", data-lg = ""). </li>
       </ul>
     </div>
   </div>
