--- a/temalar/sosero2/html/site.html
+++ b/temalar/sosero2/html/site.html
@@ -163,27 +163,44 @@
             </label>
           </li>
           <li>
-            <a href="urunler.html" data-ajax-getir="1"><i class="simge-urunler"></i><span>Ürünler</span></a>
+            <a href="urunler.html" data-ajax-getir="1">
+              <i class="simge-urunler"></i><span>Ürünler</span>
+            </a>
           </li>
           <li>
-            <a href="tarifler.html" data-ajax-getir="1"><i class="simge-yemek-tarifleri"></i><span>Yemek Tarifleri</span></a>
+            <a href="tarifler.html" data-ajax-getir="1">
+              <i class="simge-yemek-tarifleri"></i><span>Yemek Tarifleri</span>
+            </a>
           </li>
           <li>
-            <a href="tesisler.html" data-ajax-getir="1"><i class="simge-uretim-tesisleri"></i><span>Üretim Tesisleri</span></a>
+            <a href="tesisler.html" data-ajax-getir="1">
+              <i class="simge-uretim-tesisleri"></i><span>Üretim Tesisleri</span>
+            </a>
           </li>
           <li>
-            <a href="katalog.html" data-ajax-getir="1"><i class="simge-katalog"></i><span>Katalog</span></a>
+            <a href="katalog.html" data-ajax-getir="1">
+              <i class="simge-katalog"></i><span>Katalog</span>
+            </a>
           </li>
           <li>
-            <a href="satisnoktalari.html" data-ajax-getir="1"><i class="simge-satis-noktalari"></i><span>Satış Noktaları</span></a></li>
-          <li>
-            <a href="haberler.html" data-ajax-getir="1"><i class="simge-haberler"></i><span>Haberler</span></a>
+            <a href="satisnoktalari.html" data-ajax-getir="1">
+              <i class="simge-satis-noktalari"></i><span>Satış Noktaları</span>
+            </a>
           </li>
           <li>
-            <a href="hakkimizda.html" data-ajax-getir="1"><i class="simge-hakkimizda"></i><span>Hakkımızda</span></a>
+            <a href="haberler.html" data-ajax-getir="1">
+              <i class="simge-haberler"></i><span>Haberler</span>
+            </a>
           </li>
           <li>
-            <a href="iletisim.html" data-ajax-getir="1"><i class="simge-iletisim"></i><span>İletişim</span></a>
+            <a href="hakkimizda.html" data-ajax-getir="1">
+              <i class="simge-hakkimizda"></i><span>Hakkımızda</span>
+            </a>
+          </li>
+          <li>
+            <a href="iletisim.html" data-ajax-getir="1">
+              <i class="simge-iletisim"></i><span>İletişim</span>
+            </a>
           </li>
         </ul>
       </nav>
@@ -191,12 +208,8 @@
     </div>
 
   </div>
-      <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
-          
-          <script src="/temalar/sosero2/assets/js/slick.min.js" type="text/javascript" charset="utf-8"></script>
-          <script src="/temalar/sosero2/assets/js/genel.js" type="text/javascript" charset="utf-8"></script>
-            <script type="text/javascript">
-
-            </script>
+  <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
+  <script src="/temalar/sosero2/assets/js/slick.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="/temalar/sosero2/assets/js/genel.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
